feat: added slug support for posts.
