# src/modules/post/post.router.ts
@@ -6,14 +6,17 @@ import PostController from './post.controller';
 const router = Router();
 const controller = new PostController();
 
-router
-  .route('/')
-  .get(asyncWrapper(controller.findAll))
-  .post(authenticate, asyncWrapper(controller.create));
 
 router
-  .route('/:id')
-  .patch(authenticate, asyncWrapper(controller.update))
-  .delete(authenticate, asyncWrapper(controller.delete));
+.route('/')
+.get(asyncWrapper(controller.findAll))
+.post(authenticate, asyncWrapper(controller.create));
+
+router
+.route('/:id')
+.patch(authenticate, asyncWrapper(controller.update))
+.delete(authenticate, asyncWrapper(controller.delete));
+
+router.route('/:slug').get(asyncWrapper(controller.findAll));
 
 export { router as post_router };
